feat: add general fixes to client assets

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -221,3 +221,28 @@ body {
 .opacity_layer_bg {
   background: linear-gradient(180deg, rgba(4, 21, 45, 0) 0%, #04152d 79.17%);
 }
+
+@keyframes smoothFade {
+  0% {
+    opacity: 0;
+  }
+  20% {
+    opacity: 0.2;
+  }
+  40% {
+    opacity: 0.4;
+  }
+  60% {
+    opacity: 0.6;
+  }
+  80% {
+    opacity: 0.8;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.fade-transition {
+  animation: smoothFade 1s ease-in-out;
+}
