--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,7 +16,7 @@ body {
 
 /* use in homePage */
 .homepage_bg {
-  background: url('./assets/images/bghome.svg');
+  background: url('./assets/images/home/bg_home.svg');
 }
 
 .gradient_color {
